<resources>
    <string name="app_name" translatable="false">Kernel Manager</string>
    <string name="app_license">License</string>
    <string name="app_contrib">Contributors</string>
    <string name="app_downloads">Downloads</string>
    <string name="app_settings">Settings</string>
    <string name="download">Download</string>
    <string name="retry">Retry</string>
    <string name="flash">Flash</string>
    <string name="delete">Delete</string>
    <string name="ignore">Ignore</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="hide">Hide</string>
    <string name="install">Install</string>
    <string name="login">Login</string>
    <string name="icon">Icon</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_device">Device</string>
    <string name="main_kernel">Kernel</string>
    <string name="main_about">About</string>
    <string name="main_otaid" translatable="false">Psycho-Kernel Updater ID</string>
    <string name="kernel_download_ticker">Psycho-Kernel Update Available</string>
    <string name="kernel_download_title">Psycho-Kernel Update Available: %1$s</string>
    <string name="kernel_download_details">Psycho-Kernel update is available\n\nVersion: %1$s</string>
    <string name="kernel_download_progress">Psycho-Kernel Update Downloading</string>
    <string name="kernel_download_failed">Psycho-Kernel Download Failed</string>
    <string name="kernel_download_done">Psycho-Kernel Download Complete</string>
    <string name="kernel_download_alert_title">Downloading Psycho-Kernel update (%1$s version %2$s)</string>
    <string name="kernel_toast_no_update">There is no Psycho-Kernel update at this time</string>
    <string name="kernel_update_to">This update will update your Psycho-Kernel to version %2$s</string>
    <string name="kernel_version">Psycho-Kernel Version</string>
    <string name="kernel_version_unknown">Unknown Kernel Version</string>
    <string name="kernel_unsupported">No Psycho-Kernel?</string>
    <string name="kernel_unsupported_summary">It seems you are not using a Psycho-Kernel! :(\n\n(Psycho-Kernel.prop missing)</string>
    <string name="alert_nodata_title">No Data Connection!</string>
    <string name="alert_nodata_message">You have no data connection.\nPlease turn on Wi-Fi or Mobile Data in order to check for and download Psycho-Kernel updates.</string>
    <string name="alert_nowifi_title">No Wi-Fi Connection!</string>
    <string name="alert_nowifi_message">You are on a mobile connection.\nThis app uses data heavily to download Kernel updates.\nIt is recommended to turn on Wi-Fi to avoid overage charges.</string>
    <string name="alert_wifi_settings">Wi-Fi Settings</string>
    <string name="alert_install_title">Install ZIP</string>
    <string name="alert_install_message">Installing this update will reboot into recovery to flash the ZIP file. After installation, the system will automatically reboot.</string>
    <string name="alert_noinstall_message">Unfortunately, Kernels on your device must be flashed manually.\nPlease use the correct method for your device to flash the Kernel\n\nThe .zip file is located at: %1$s</string>
    <string name="alert_update_title">Kernel update available!</string>
    <string name="alert_downloading">Downloading…</string>
    <string name="alert_unsupported_title">Unsupported Kernel</string>
    <string name="alert_unsupported_message">There is no Psycho-Kernel! This App only available with Psycho-Kernel!\n\n(Psycho-Kernel.prop missing)</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_settings">Settings</string>
    <string name="notif_source">Psycho-Kernel Update</string>
    <string name="notif_completed">Download finished. Tap to flash update.</string>
    <string name="toast_delete">File deleted successfully</string>
    <string name="toast_delete_error">There was a problem while deleting the selected file</string>
    <string name="toast_file_error">Error loading file</string>
    <string name="toast_nosd_shared">Your SD card is unavailable - mounted as USB Storage</string>
    <string name="toast_nosd_error">Your SD card is unavailable</string>
    <string name="toast_update_fetch_error">There was an error fetching update information</string>
    <string name="toast_downloading">Your download is still running, check notifications for progress…</string>
    <string name="about_ota_title" translatable="false">Psycho-Kernel Manager</string>
    <string name="about_ota_summary">Copyright © 2017\nBy Psycho-Mods\n(Based on OTA Updater)\n\nAll of kernel sources are available in my Github.\n(Tap to visit my Github.)</string>
    <string name="about_version_title">Version</string>
    <string name="about_license_title">Open-Source License</string>
    <string name="about_contrib_title">Contributors</string>
    <string name="updates_avail_title">Available Updates</string>
    <string name="updates_checking">Checking for available updates…</string>
    <string name="updates_none">No update available. Tap to check manually.</string>
    <string name="update_fetch_error">Error fetching update info: %1$s</string>
    <string name="updates_new">New update: %1$s (version %2$s)\nTap to download/flash!</string>
    <string name="downloads_kernel_label">Downloading Psycho-Kernel Update</string>
    <string name="downloads_size_progress_b" translatable="false">%1$.1f%% (%2$d / %3$d bytes)</string>
    <string name="downloads_size_progress_kb" translatable="false">%1$.1f%% (%2$d / %3$d KB)</string>
    <string name="downloads_size_progress_mb" translatable="false">%1$.1f%% (%2$d / %3$d MB)</string>
    <string name="downloads_size_progress_gb" translatable="false">%1$.1f%% (%2$d / %3$d GB)</string>
    <string name="downloads_size_progress_unknown_b" translatable="false">%1$.1f%% (%2$d bytes)</string>
    <string name="downloads_size_progress_unknown_kb" translatable="false">%1$.1f%% (%2$d KB)</string>
    <string name="downloads_size_progress_unknown_mb" translatable="false">%1$.1f%% (%2$d MB)</string>
    <string name="downloads_size_progress_unknown_gb" translatable="false">%1$.1f%% (%2$d GB)</string>
    <string name="downloads_starting">Starting Download…</string>
    <string name="downloads_paused_wifi">Waiting for Wi-Fi…</string>
    <string name="downloads_paused_network">Waiting for Data connection…</string>
    <string name="downloads_paused_retry">Waiting to retry download…</string>
    <string name="downloads_paused_unknown">Waiting for download to proceed…</string>
    <string name="downloads_failed_http">Download failed: HTTP Error</string>
    <string name="downloads_failed_mount">Download failed: No storage device found</string>
    <string name="downloads_failed_space">Download failed: Not enough space</string>
    <string name="downloads_failed_fileexists">Download failed: file already exists</string>
    <string name="downloads_failed_resume">Download failed: cannot resume download</string>
    <string name="downloads_failed_md5">Download failed: MD5 error - invalid download</string>
    <string name="downloads_failed_unknown">Download failed</string>
    <string name="downloads_none">No Downloads Found</string>
    <string name="downloads_no_status">Unable to get download status</string>
    <string name="downloads_complete">Finished! Ready to flash!</string>
    <string name="downloads_file" translatable="false">%1$s</string>
    <string name="settings_title">Settings</string>
    <string name="settings_notif_title">Notify me of new updates</string>
    <string name="settings_notif_summary_off">Update notifications will not be shown\nYou will have to open the app manually to see if there are updates</string>
    <string name="settings_notif_summary_on">Update notifications will be shown</string>
    <string name="settings_wifidl_title">Downloads on Wi-Fi only</string>
    <string name="settings_wifidl_summary_on">Updates will only be downloaded when a Wi-Fi connection is available</string>
    <string name="settings_wifidl_summary_off">Updates will be downloaded on whatever connection is available.\n\nWARNING: Updates will download on the mobile network if Wi-Fi is unavailable. The updates may be quite large and possibly result in overage charges.</string>
    <string name="settings_autodl_title">Auto-download updates</string>
    <string name="settings_autodl_summary_off">Updates will not be downloaded automatically.</string>
    <string name="settings_autodl_summary_on">Updates will be downloaded automatically.</string>
    <string name="settings_resetwarn_title">Reset ignored warnings</string>
    <string name="settings_resetwarn_summary">Any warnings that have been ignored will be shown again.</string>
    <string name="settings_support">Support Development</string>
    <string name="unknown_error">An unknown error has occurred!</string>
    <string name="alert_changelog">View Changelog</string>
    <string name="about_version_unknown">Unknown Version </string>
    <string name="allow_permissions">Please allow permissions for kernel updates!</string>
    <string name="need_storage_permission">Please grant storage permission.</string>
    <string name="need_root_permission">Psycho-Kernel Manager needs root permission!</string>
    <string name="root_check_failed">Failed to check root status! Is \'whoami\' command missing?</string>
    <string name="su_exec_error">Error occurred while executing SU command. Is it enabled?</string>
    <string name="unsupported_su">Unsupported SU binary! Please install latest version of Magisk or SuperSU.</string>
    <string name="title_activity_ads">Ads</string>
    <string name="Home">Home</string>
    <string name="pk">Psycho-Kernel</string>
    <string name="email">Think Psycho</string>
    <string name="donate">Support Me</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="qr">Scan The Above Code.</string>
    <string name="number">7530964486</string>
    <string name="helper">Press and Hold the number to Copy.</string>
    <string name="about">About this app</string>
    <string name="about_he">About</string>
    <string name="ab_main">Psycho-Kernel Manager</string>
    <string name="ab_hel">Kernel Manager Designed Specially For Psycho-Kernel.</string>
    <string name="ab_thanks">Special Thanks </string>
    <string name="ab_lis">• OTA Update Center \n\n• Spectrum Kernel Manager \n\n• jollaman999 \n\n• FabDialogMorph \n\n• AppUpdater</string>
    <string name="prof0">Balance</string>
    <string name="prof1">Performance</string>
    <string name="prof2">Battery</string>
    <string name="prof3">Gaming</string>
    <string name="profdesc0">The default Electron kernel profile, known for its smooth performance in basic tasks while maintaining fantastic battery.</string>
    <string name="profdesc1">Tuned for top tier performance in standard tasks with many less regressions than Balanced, but maintains battery by limiting graphics.</string>
    <string name="profdesc2">Ultra-conservative profile that lets performance take a hit in order to achieve long-lasting battery life.</string>
    <string name="profdesc3">Need that extra 10 FPS? I gotchu. Identical to performance in most areas other than the unlocked Graphics performance</string>
    <string name="cancelText">Cancel</string>
    <string name="confirmText">OK</string>
    <string name="profileConfirm">Are you sure you want to load this file?</string>
    <string name="spec">Profiles</string>
    <string name="pro">Profiles</string>
    <string name="short_down">Downloads</string>
    <string name="short_disab">Not Available</string>
    <string name="long_pro">Kernel Profiles</string>
    <string name="long_set">App Settings</string>
</resources>