<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/short_set"
        android:shortcutDisabledMessage="@string/short_disab"
        android:shortcutId="Settings"
        android:shortcutLongLabel="@string/long_set"
        android:shortcutShortLabel="@string/long_set"
        tools:targetApi="25">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.psychokernelupdater.SettingsActivity"
            android:targetPackage="com.psychokernelupdater" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/short_down"
        android:shortcutDisabledMessage="@string/short_disab"
        android:shortcutId="Downloads"
        android:shortcutLongLabel="@string/short_down"
        android:shortcutShortLabel="@string/short_down"
        tools:targetApi="25">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.psychokernelupdater.DownloadsActivity"
            android:targetPackage="com.psychokernelupdater" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/short_pro"
        android:shortcutDisabledMessage="@string/short_disab"
        android:shortcutId="Profiles"
        android:shortcutLongLabel="@string/long_pro"
        android:shortcutShortLabel="@string/long_pro"
        tools:targetApi="25">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.psychokernelupdater.SplashActivity"
            android:targetPackage="com.psychokernelupdater" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
