<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pDialogHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:text="@string/profileConfirm"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    <Button
        android:id="@+id/pDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/pDialogHint"
        android:background="@android:color/transparent"
        android:paddingBottom="10dp"
        android:text="@string/cancelText"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/pDialogConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/pDialogHint"
        android:background="@android:color/transparent"
        android:paddingBottom="10dp"
        android:text="@string/confirmText"
        android:textColor="@color/colorAccent" />

</RelativeLayout>