<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/paytm" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView">

        <TextView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/qr"
            android:textColor="@color/navtext"
            android:textIsSelectable="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="OR"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/number"
            android:textColor="@color/navtext"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/helper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/helper"
            android:textColor="#B0BEC5"
            android:textIsSelectable="false"
            android:textSize="14sp" />

    </RelativeLayout>
</RelativeLayout>