<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/spec" />

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_below="@id/toolbar7"
    tools:context="com.psychokernelupdater.MainActivity">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="org.frap129.spectrum.MainActivity"
        tools:showIn="@layout/activity_main">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="org.frap129.spectrum.MainActivity">

            <android.support.v7.widget.CardView
                android:id="@+id/card0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prof0"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/colorAccent"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end"
                    android:src="@drawable/atom"
                    android:tint="#fff" />

                <TextView
                    android:id="@+id/desc0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:gravity="bottom"
                    android:text="@string/profdesc0"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/card0"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prof1"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/colorAccent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/rocket"
                    android:tint="#fff"/>

                <TextView
                    android:id="@+id/desc1"
                    android:layout_marginTop="34dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profdesc1"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:gravity="bottom"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/card1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prof2"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/colorAccent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/battery"
                    android:tint="#fff"/>

                <TextView
                    android:id="@+id/desc2"
                    android:layout_marginTop="34dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profdesc2"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:gravity="bottom"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/card2"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prof3"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/colorAccent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/game"
                    android:tint="#fff"/>

                <TextView
                    android:id="@+id/desc3"
                    android:layout_marginTop="34dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profdesc3"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:gravity="bottom"/>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
    <android.support.design.widget.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorAccent"
        app:menu="@menu/navigation_items" />
</android.support.v4.widget.DrawerLayout>