<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/about_he" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.psychokernelupdater.About">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:elevation="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/about"
                tools:ignore="ContentDescription" />

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="360dp"
                android:layout_height="100dp"
                android:layout_below="@id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/ab_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/ab_main"
                    android:textColor="#F44336"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ab_hel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/ab_hel" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="360dp"
                android:layout_height="165dp"
                android:layout_below="@id/card1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingTop="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/ab_thanks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ab_thanks"
                    android:textColor="#F44336"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ab_lis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="42dp"
                    android:text="@string/ab_lis" />

            </android.support.v7.widget.CardView>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:elevation="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>

        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorAccent"
        app:itemTextColor="@color/navtext"
        app:menu="@menu/navigation_items" />
</android.support.v4.widget.DrawerLayout>
